remove / rename remaining bits of achme demo

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 	<target name="clean-package">
 		<!--
 		Remove some unnecessary files/directories
-		${dir}/ is the folder of your extension, e.g. ext/cogauth/demo/
+		${dir}/ is the folder of your extension, e.g. ext/mrfg/cogauth/
 		-->
 		<delete dir="${dir}/tests" />
 		<delete dir="${dir}/travis" />
