--- a/config/services.yml
+++ b/config/services.yml
@@ -1,12 +1,5 @@
-services:
-    mrfg.cogauth.controller:
-        class: mrfg\cogauth\controller\main
-        arguments:
-            - '@config'
-            - '@controller.helper'
-            - '@template'
-            - '@language'
 
+services:
     mrfg.cogauth.listener:
         class: mrfg\cogauth\event\main_listener
         arguments:
@@ -16,18 +9,7 @@ services:
             - '%core.php_ext%'
         tags:
             - { name: event.listener }
+imports:
+- { resource: auth.yml }
 
 
-    auth.provider.cogauth:
-        class: mrfg\cogauth\auth\provider\cogauth
-        arguments:
-            - '@dbal.conn'
-            - '@config'
-            - '@passwords.manager'
-            - '@request'
-            - '@user'
-            - '@service_container'
-            - '%core.root_path%'
-            - '%core.php_ext%'
-        tags:
-            - { name: auth.provider }
