--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "aws/aws-sdk-php": "3.*"
     },
     "extra": {
         "display-name": "AWS Cognito Authentication",
