--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": ">=5.3.3",
         "composer/installers": "~1.0",
-        "aws/aws-sdk-php": "3.*"
+        "aws/aws-sdk-php": "3.*",
+        "web-token/jwt-signature": "^1.0"
     },
     "extra": {
         "display-name": "AWS Cognito Authentication",
