--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": ">=5.3.3",
         "composer/installers": "~1.0",
         "aws/aws-sdk-php": "3.*",
-        "web-token/jwt-signature": "^1.0"
+        "web-token/jwt-signature": "^1.0",
+        "ext-json": "*"
     },
     "extra": {
         "display-name": "AWS Cognito Authentication",
@@ -27,8 +28,7 @@
         }
     },
     "require-dev": {
-        "phing/phing": "2.4.*",
-        "phpunit/dbunit": "~2.0",
-        "phpunit/phpunit": "^5.7"
+        "phing/phing": "2.4.*"
+
     }
 }
