--- a/config/auth.yml
+++ b/config/auth.yml
@@ -7,8 +7,10 @@ services:
             - '@passwords.manager'
             - '@request'
             - '@user'
+            - '@language'
             - '@service_container'
             - '@mrfg.cogauth.cognito'
+            - '@mrfg.cogauth.web_token'
             - '%core.root_path%'
             - '%core.php_ext%'
             - '%mrfg.cogauth.tables.cogauth_session%'
