--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
     "require": {
         "php": ">=5.3.3",
         "composer/installers": "~1.0",
-        "aws/aws-sdk-php": "3.*",
         "web-token/jwt-signature": "^1.0",
         "ext-json": "*"
     },
@@ -30,6 +29,7 @@
     "require-dev": {
         "phing/phing": "2.4.*",
         "phpunit/dbunit": "~2.0",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "aws/aws-sdk-php": "3.*"
     }
 }
