--- a/config/services.yml
+++ b/config/services.yml
@@ -12,8 +12,8 @@ services:
     mrfg.cogauth.cognito_client_wrapper:
         class: mrfg\cogauth\cognito\cognito_client_wrapper
 
-    mrfg.cogauth.web_token:
-        class: mrfg\cogauth\cognito\web_token
+    mrfg.cogauth.web_token_phpbb:
+        class: mrfg\cogauth\cognito\web_token_phpbb
         arguments:
         - '@config'
         - '@cache.driver'
@@ -27,13 +27,23 @@ services:
         - '@user'
         - '@log'
         - '@mrfg.cogauth.cognito_client_wrapper'
-        - '@mrfg.cogauth.web_token'
+        - '@mrfg.cogauth.web_token_phpbb'
         - '%mrfg.cogauth.tables.cogauth_session%'
 
+    mrfg.cogauth.controller:
+        class: mrfg\cogauth\controller\main
+        arguments:
+            - '@config'
+            - '@user'
+            - '@request'
+            - '@auth.provider.cogauth'
+            - '@mrfg.cogauth.cognito'
+            - '@language'
 
 imports:
 - { resource: auth.yml }
 - { resource: tables.yml }
 - { resource: parameters.yml }
+
 
 
