--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
-acme_demo_route:
-    path: /cogauth/cmd/{command}/{payload}
-    defaults: { _controller: mrfg.cogauth.controller:handle, command: "", payload: "" }
+cogauth_route:
+    path: /cogauth/cmd/{command}
+    defaults: { _controller: mrfg.cogauth.controller:handle, command: ""}
