Fix ACLs on login / logout sync

--- a/config/services.yml
+++ b/config/services.yml
@@ -4,6 +4,7 @@ services:
         class: mrfg\cogauth\event\main_listener
         arguments:
             - '@user'
+            - '@auth'
             - '@request'
             - '@config'
             - '@mrfg.cogauth.cognito'
