--- a/config/services.yml
+++ b/config/services.yml
@@ -4,10 +4,8 @@ services:
         class: mrfg\cogauth\event\main_listener
         arguments:
             - '@user'
-            - '@auth'
-            - '@request'
-            - '@config'
             - '@mrfg.cogauth.cognito'
+            - '@dispatcher'
             - '%mrfg.cogauth.tables.cogauth_session%'
         tags:
             - { name: event.listener }
