Get access token refreshes token if expired plus tests

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,6 @@
         }
     },
     "require-dev": {
-        "phing/phing": "2.4.*",
-        "phpunit/dbunit": "~2.0",
-        "phpunit/phpunit": "^5.7"
+        "phing/phing": "2.4.*"
     }
 }
