--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     "require": {
         "php": ">=5.3.3",
         "composer/installers": "~1.0",
-        "web-token/jwt-signature": "^1.0",
+        "web-token/jwt-signature": ">=1.0",
         "ext-json": "*",
+        "ext-curl": "*",
         "aws/aws-sdk-php": "3.*"
     },
     "extra": {
