--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
 cogauth_route:
-    path: /cogauth/cmd/{command}
+    path: /cogauth/auth/{command}
     defaults: { _controller: mrfg.cogauth.controller:handle, command: ""}
