--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "web-token/jwt-signature": ">=1.0",
         "ext-json": "*",
         "ext-curl": "*",
-        "aws/aws-sdk-php": "3.*"
+        "aws/aws-sdk-php": "3.*",
+        "web-token/jwt-core": "^2.0",
+        "web-token/jwt-signature-algorithm-rsa": "2.0.x-dev"
     },
     "extra": {
         "display-name": "AWS Cognito Authentication",
