--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     "require": {
         "php": ">=5.3.3",
         "composer/installers": "~1.0",
-        "web-token/jwt-signature": ">=1.0",
         "ext-json": "*",
         "ext-curl": "*",
         "aws/aws-sdk-php": "3.*",
-        "web-token/jwt-core": "^2.0",
-        "web-token/jwt-signature-algorithm-rsa": "2.0.x-dev"
+		"web-token/jwt-signature": ">=2.0",
+        "web-token/jwt-core": ">=2.0",
+        "web-token/jwt-signature-algorithm-rsa": ">=2.0"
     },
     "extra": {
         "display-name": "AWS Cognito Authentication",
