Refactoring to break up Cognito Class and use Hosted UI login Part 5 (fix bug)

--- a/config/services.yml
+++ b/config/services.yml
@@ -32,6 +32,7 @@ services:
         arguments:
             - '@mrfg.cogauth.web_token_phpbb'
             - '@dbal.conn'
+            - '@log'
             - '%mrfg.cogauth.tables.cogauth_authentication%'
 
     mrfg.cogauth.cognito:
