Modifications to ACP, add error handling and configuration of Cognito User Pool App Client.

--- a/config/services.yml
+++ b/config/services.yml
@@ -8,6 +8,9 @@ services:
             - '@mrfg.cogauth.auth_result'
             - '@mrfg.cogauth.cognito_controller'
             - '@dispatcher'
+            - '@request'
+            - '@config'
+
         tags:
             - { name: event.listener }
 
