--- a/config/services.yml
+++ b/config/services.yml
@@ -46,10 +46,10 @@ services:
             - '@language'
             - '@request'
             - '@log'
-            - '@mrfg.cogauth.cognito_client_wrapper'
             - '@mrfg.cogauth.web_token_phpbb'
             - '@mrfg.cogauth.user'
             - '@mrfg.cogauth.auth_result'
+            - '@aws.sdk'
 
     mrfg.cogauth.cognito_client_wrapper:
         class: mrfg\cogauth\cognito\cognito_client_wrapper
@@ -76,6 +76,8 @@ services:
         tags:
             - { name: cron.task }
 
+    aws.sdk:
+        class: Aws\Sdk
 
 
 imports:
