--- a/config/services.yml
+++ b/config/services.yml
@@ -10,6 +10,7 @@ services:
             - '@dispatcher'
             - '@request'
             - '@config'
+            - '@template'
 
         tags:
             - { name: event.listener }
