--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "phpbb-extension",
     "description": "AWS Cognito Authentication extension",
     "homepage": "http://wler.co.uk",
-    "version": "1.0.5-dev",
+    "version": "1.1.0-dev",
     "time": "2018-08-02",
     "license": "GPL-2.0-only",
     "authors": [
@@ -27,7 +27,7 @@
     "extra": {
         "display-name": "AWS Cognito Authentication",
         "soft-require": {
-            "phpbb/phpbb": ">=3.1.4,<3.2.0@dev"
+            "phpbb/phpbb": ">=3.3.0"
         }
     },
     "require-dev": {
